# django-helpers

./: Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: validate-python.yml
django_helpers/: admin.py  admin_filters.py  links.py  prefetch.py  test_prefetch.py  tests.py
