[tool.poetry]
name = "django-helpers"
version = "0.1.0"
description = ""
authors = ["Michael Renken <michaelarenken@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
basedpyright = "^1.28.1"
django-types = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
